@@ -4,7 +4,7 @@
     <string name="title_section1">List</string>
     
     <string name="app_name">MessageCounter</string>
-    <string name="app_version">Version 2.0.94 (August 2013)</string>
+    <string name="app_version">Version 2.0.96 (August 2013)</string>
     <string name="app_desc">Message Counter displays the number of messages in your inbox, message counts from your contacts. Source Code at (https://github.com/midhunhk/message-counter)</string>
 	<string name="app_disclaim">Disclaimer: This app is created for educational purposes and as such has no guarantee or support. Since undocumented Android APIs are used, this app may not work as expected on all devices.</string>
 	<string name="app_developer_info">Designed &amp; developed at ae labs</string>
@@ -37,7 +37,7 @@ See the License for the specific language governing permissions and
 limitations under the License.</string>
 
     <string name="str_chart_title">Top message senders</string>
-    <string name="str_other_senders">(Others) text may include messages from numbers who are not saved in your contacts and messages from mobile networks or financial institutions.</string>
+    <string name="str_other_senders">(Others) text may include messages from numbers which are not saved in your contacts and messages from mobile networks or financial institutions.</string>
     
     <!-- Configuration - not to be translated -->
     <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.ae.apps.messagecounter</string>
